web_static/styles/4-filters.css
.filters {
	background-color: white;
	height: 70x;
	width: 100%;
	border-width: 1px;
	border-style: solid;
	border-color: #DDDDDD;
	border-radius: 4px;
	display: flex;
	justify-content: flex-end;
}
button {
	font-size: 18px;
	color: #FFFFFF;
	background-color: #FF5A5F;
	height: 48px;
	width: 20%;
	border-radius: 4px;
	margin-top: 10px;
	margin-bottom: 10px;
	margin-right: 30px;
	display: flex;
	justify-content: center;
	align-items: center;
}
button:hover {
  opacity: 0.9;
}

